--- a/pages/advertising/advertising.wxss
+++ b/pages/advertising/advertising.wxss
@@ -1,1 +1,47 @@
 /* pages/advertising/advertising.wxss */
+page{
+  background: #f1f1f1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.ad-container{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10rpx;
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+  box-sizing: border-box;
+}
+
+.ad-item{
+  width: 100%;
+  margin-bottom: 20px;
+  background: #fff;
+}
+
+.ad-item image{
+  width: 100%;
+}
+
+.ad-item-body{
+  padding: 10rpx 20rpx 30rpx 20rpx;
+}
+
+.ad-item-title{
+  font-size: 28rpx;
+  color: #000;
+  text-align: center;
+  line-height: 46rpx;
+}
+
+.ad-item-content{
+  font-size: 28rpx;
+  color: #919191;
+  line-height: 46rpx;
+}
