--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -17,39 +17,51 @@ page{
 } 
 
 .list{
-  height: 200rpx;
+  height: 224rpx;
   width: 100%;
-  padding: 10rpx;
+  padding: 12rpx;
   box-sizing: border-box;
   background: #fff;
   margin-top: 20rpx;
 }
 
 .list image{
-  width: 180rpx;
-  height: 180rpx;
+  width: 200rpx;
+  height: 200rpx;
   float: left;
 }
 
 .list .list-body{
-  float: left;
-  margin-left: 20rpx;
+  /* float: left; */
+  margin-left: 230rpx;
+  height: 200rpx;
+}
+.list-item-title{
+  line-height: 70rpx;
+  font-size: 30rpx;
+  color: #0a0a0a;
+  font-weight: 600;
 }
 
 .list-item-address,.list-item-phone{
   font-size: 24rpx;
-  margin-top: 10rpx;
-  line-height: 40rpx;
+  line-height: 50rpx;
+  height: 50rpx;
+  overflow: hidden;
 }
 
-.list-item-address icon{
-  margin-top: 8rpx;
+.list-item-address text{
   float: left;
   margin-right: 10rpx;
+  color: #68d8c8;
 }
 
 .list-item-phone{
   margin-top: 8rpx;
   float: left;
   margin-right: 10rpx;
+}
+
+.list-item-phone text{
+  color: #f55e31;
 }
