--- a/packageA/pages/statistical/statistical.wxss
+++ b/packageA/pages/statistical/statistical.wxss
@@ -8,18 +8,24 @@ page{
 
 .container{
   width: 100%;
-  height: 600rpx;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
-.myfirstChart {
+.swiper-main{
   width: 100%;
-  height: 600rpx;
-}
-.echarts-main{
-  background: #fff;  
-  width: 100%;
-  height: 600rpx;
+  flex: 1;
+  overflow-y: auto;
 }
 
+.bottom-tab{
+  height: 80rpx;
+  width: 100%;
+  background: #eee;
+  border-top: 2rpx solid #ddd;
+}
 
 .scroll-view_H{
   width: 100%;
@@ -47,82 +53,7 @@ page{
   border-bottom: 4rpx solid #3b72f0;
 }
 
-.container-statistical{
-  width: 100%;
+
+.scroll-h{
   height: 100%;
-}
-.statistical-title{
-  height: 68rpx;
-  padding: 16rpx 30rpx;
-  box-sizing: border-box;  
-  border-bottom: 2rpx solid #ddd;
-  position: relative;
-  background: #fff;  
-}
-.statistical-title:before{
-  content: '';
-  position: absolute;  
-  display: block;
-  width: 10rpx;
-  height: 28rpx;  
-  top: 18rpx;
-  background: #3a98cc;
-}
-
-.statistical-title .text-title{
-  font-size: 28rpx;
-  line-height: 30rpx;
-  color: #000;
-  float: left;
-  margin-left: 30rpx;
-}
-.text-right{
-  float: right;
-  font-size: 24rpx;
-  line-height: 34rpx;
-  color: #999999;
-}
-
-.bg-color-gray{
-  background: #f1f1f1;
-}
-
-.bg-color-white{
-  background: #fff;
-}
-
-.list-block{
-  width: 25%;
-  height: 90rpx;
-  border-right:  2rpx solid #eee;
-  border-bottom: 2rpx solid #eee;
-  float: left;
-  box-sizing: border-box;
-  text-align: center;
-}
-
-.list-block-label{
-  color: #b1b1b1;
-  line-height: 42rpx;
-  font-size: 24rpx;
-}
-.list-block-value{
-  color: #db6734;
-  line-height: 42rpx;
-  font-size: 24rpx;
-}
-.list-block-total{
-  padding: 20rpx;
-  box-sizing: border-box;
-  color: #b1b1b1;
-  line-height: 60rpx;
-  font-size: 24rpx;
-  border-bottom: 2rpx solid #eee;
-}
-
-.list-block-total .total-value{
-  float: right;
-  color: #db6734;
-  line-height: 60rpx;
-  font-size: 24rpx;
 }
