--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -62,11 +62,13 @@ page{
 .login-btn{
   margin: 0 auto;
   width: 70%;
-  height: 80rpx;
+  height: 90rpx;
   background: #3a98cc;
   color: #fff;
   border: none;
   border-radius: 6rpx;
+  font-size: 38rpx;
+  line-height: 90rpx;
 }
 
 
