--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,15 +3,15 @@
   <view class='list' wx:for="{{alllist}}" wx:for-item="item" bindtap='goStatistical'>
     <image src='{{item.images.large}}'></image>
     <view class='list-body'>
-      <view class='list-item-title text-ellipsis'>{{item.title}}</view>
+      <view class='list-item-title text-ellipsis'>{{item.storeName}}</view>
       <view class='list-item-address text-ellipsis'>
         <!-- <icon type="success" size="12" color="green" /> -->
         <text class="iconfont icon-dizhi-01"></text>
-        {{item.summary}}
+        {{item.address}}
       </view>
       <view class='list-item-phone' data-phone="{{item.phone}}" bindtap='call'>
         <text class='iconfont icon-dianhua'></text>
-        {{item.phone}}
+        {{item.fphone}}
       </view>
     </view>
   </view>
