--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,20 +1,21 @@
   
 <view class='container'>
-    <view class='clearfix userinfo-mian' wx:if='{{!isGoLogin}}'>
-      <view class="userinfo">
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="../../img/icon/gongneng.png" mode="cover"></image>
-        <view class="userinfo-tips">允许小程序获取您的基本信息（头像、昵称等）</view>
-      </view>
+  <form class='form-login clearfix' bindsubmit="formSubmit" bindreset="formReset">
 
-      <view class='footer-main'>
-        <view class='footer-btn'>
-          <!-- <button class='login-btn' bindtap='login'> 重新登录 </button> -->
-          <button class='login-btn' open-type="getUserInfo" bindgetuserinfo="getUserInfo">授权登录</button>
-        </view>
-        <view class='footer-text'>足浴保健行业引领者</view>
+    <view class='form-content clearfix'>
+      <view class="section">
+        <view class="section__title">手机号码</view>
+        <input name="phone" type='number' bindblur='phoneBlur' placeholder="请输入手机号码" />
+      </view>
+      <view class="section">
+        <view class="section__title">动态码</view>
+        <input name="code" type='number' placeholder="请输入手机验证码" />
+        <button class='code {{isRightPhone == true ? "disabled": ""}}' disabled='{{isRightPhone}}' bindtap='getCode'>{{isGetCode? countdown+'s后重发' : '获取验证码'}}</button>
       </view>
     </view>
-    <view class='login-main' wx:if='{{isGoLogin}}'>
-      <login></login>
+
+    <view class="btn-area">
+      <button class='login-btn' form-type="submit">绑定</button>
     </view>
+  </form>
 </view>
