--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -12,68 +12,90 @@ page{
   flex-direction: column;
   align-items: center;
 }
+/* pages/components/login/login.wxss */
 
-.userinfo-mian{
+.container{
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.userinfo {
-  flex: 1;
-  /* display: flex;
-  flex-direction: column;   */
-  align-items: center; 
-  justify-content: space-between;
-  text-align: center;
-  margin-top: 100rpx;
+  background: #f1f1f1;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+
+.form-login{
+  display: block;
+  width: 100%;
+  height: auto;
+  padding-top: 30rpx;
 }
 
-.userinfo-tips {
+.form-content{
+  background: #fff;  
+  border-bottom: 2rpx solid #ddd;
+  border-top: 2rpx solid #ddd;
+  margin-bottom: 30rpx;
+  padding-left: 30rpx;
+  box-sizing: border-box;
+}
+.form-login .section{
+  width: 100%;
+  height: 118rpx;
+  position: relative;
+}
+.form-login .section:first-child{
+  border-bottom: 2rpx solid #ddd;  
+}
+
+.section__title{
+  float: left;
+  width: 150rpx;
+  font-size: 30rpx;
   color: #666;
+  line-height: 118rpx;
+  height: 118rpx;
+}
+
+.form-login .section input{
+  height: 118rpx;
+  line-height: 118rpx;
+  font-size: 30rpx;
+}
+.form-login .section .code{
+  position: absolute;
+  right: 20rpx;
+  top: 26rpx;
+  min-width: 120rpx;
+  height: 70rpx;
   font-size: 26rpx;
-}
-
-.footer-main{
-  width: 100%;
-  height: 200rpx;
-}
-
-.footer-text{
-  color: #666;
-  font-size: 22rpx;
   text-align: center;
+  line-height: 70rpx;
+  background: none;
+  padding: 0 20rpx;
+  z-index: 999;
+  color: #3a98cc;
+}
+.form-login .section .code.disabled{
+  color: rgba(0, 0, 0, 0.3);
 }
 
-.footer-btn{
-  margin-bottom: 20rpx;
-  width: 100%;
-}
+
+
+
+
+
+
+
+
+
+
 
 .login-btn{
   margin: 0 auto;
-  width: 70%;
+  width: 90%;
   height: 90rpx;
   background: #3a98cc;
   color: #fff;
   border: none;
-  border-radius: 6rpx;
   font-size: 38rpx;
+  border-radius: 6rpx;
   line-height: 90rpx;
-}
-
-
-
-.login-main{
-  width: 100%;
-  height: 100%;
 }
