--- a/pages/statistical/statistical.wxml
+++ b/pages/statistical/statistical.wxml
@@ -1,3 +1,3 @@
 <!--pages/statistical/statistical.wxml-->
 
-<!-- <web-view src="{{url}}" bindmessage="bindGetMsg"></web-view> -->
+<web-view src="{{url}}" bindmessage="bindGetMsg"></web-view>
